<resources>
    <string name="app_name">Home Chore</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="signUptext">Dont have an account</string>
    <string name="signup">Sign up</string>
    <string name="login_id">login_id</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="title_add_chore">Add Chore</string>
    <string name="chorename">Enter Chore Name</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="calender">calendar</string>
    <string name="date_example">Ex. 12/29/2018</string>
    <string name="assign_task_to">Assign Task To :</string>
    <string name="about">About</string>
    <string name="about_task">This is a example task</string>
    <string name="example_feedback">Example feedback</string>
    <string name="task_assigned_to_example">Ex. Bob</string>
    <string name="select">select</string>
    <string name="create">Create</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="sample_chorename">Get Grocery</string>
    <string name="feedback">feedback</string>
    <string name="time_to_complete">Time to Complete : (Hours)</string>
    <string name="sample_hours">Ex: 2</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="rememberme">Remember me ?</string>
    <string-array name="roommate_array">
        <item>ashish</item>
        <item>brad</item>
        <item>will</item>
    </string-array>
</resources>
