<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/homechores"
        app:layout_constraintLeft_toRightOf="@id/vguideline1"
        app:layout_constraintRight_toLeftOf="@id/vguideline2"
        app:layout_constraintTop_toBottomOf="@id/hguideline"
        />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_id_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_id"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_id_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_id_input_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:id="@+id/login_button"
        app:layout_constraintEnd_toStartOf="@+id/forgotpassword"
        app:layout_constraintRight_toLeftOf="@id/forgotpassword"
        app:layout_constraintStart_toStartOf="@id/password_id_input_layout"
        app:layout_constraintTop_toBottomOf="@id/password_id_input_layout" />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/password_id_input_layout"
        app:layout_constraintLeft_toRightOf="@+id/login_button"
        app:layout_constraintStart_toEndOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/password_id_input_layout" />


    <android.support.constraint.Guideline
        android:id="@+id/hguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


    <android.support.constraint.Guideline
        android:id="@+id/vguideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <android.support.constraint.Guideline
        android:id="@+id/vguideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

</android.support.constraint.ConstraintLayout>
